[gd_scene load_steps=4 format=3 uid="uid://bjm58kiden55v"]

[ext_resource type="Script" path="res://scripts/split_screen_race.gd" id="1_8v8ub"]
[ext_resource type="PackedScene" uid="uid://t7us3pgenqs8" path="res://scenes/race.tscn" id="1_xlcc8"]
[ext_resource type="Script" path="res://scripts/split_screen_camera.gd" id="2_fqrfg"]

[node name="Node" type="Node"]
script = ExtResource("1_8v8ub")

[node name="viewports" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="container1" type="SubViewportContainer" parent="viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="viewport1" type="SubViewport" parent="viewports/container1"]
handle_input_locally = false
size = Vector2i(570, 648)
render_target_update_mode = 4

[node name="Camera1" type="Camera2D" parent="viewports/container1/viewport1"]
script = ExtResource("2_fqrfg")

[node name="World" parent="viewports/container1/viewport1" instance=ExtResource("1_xlcc8")]

[node name="container2" type="SubViewportContainer" parent="viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="viewport2" type="SubViewport" parent="viewports/container2"]
handle_input_locally = false
size = Vector2i(570, 648)
render_target_update_mode = 4

[node name="Camera2" type="Camera2D" parent="viewports/container2/viewport2"]
script = ExtResource("2_fqrfg")
